# turbo-vision-4-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TO-DO.md
.tokensave/: config.json
demo/: README.md
demo/help/: pascal_ide.md
docs/: BORLAND-PALETTE-CHART.md  PALETTE-SYSTEM.md  RUST-API-CATALOG.md  RUST-IMPLEMENTATION-REFERENCE.md  TURBO-VISION-DESIGN.md  key-files-summary.txt
docs/superpowers/plans/: 2026-04-10-palette-and-window-management.md
docs/superpowers/specs/: 2026-04-10-log-window-design.md
docs/user-guide/: Chapter-01-Stepping-into-Turbo-Vision.md  Chapter-02-Responding-to-Commands.md  Chapter-03-Adding-Windows.md  Chapter-04-Persistence-and-Configuration.md  Chapter-05-Creating-Data-Entry-Forms.md  Chapter-06-Managing-Data-Collections.md  Chapter-07-Architecture-Overview.md  Chapter-08-Views-and-Groups.md  Chapter-09-Event-Driven-Programming.md  Chapter-10-Application-Objects.md
examples/: README.md  log_window.rs  pascal_ide.rs  screenshot.rs  ssh_server.rs
extras/: Cargo.toml  README.md
extras/examples/: extras_controls.rs  extras_data.rs  extras_notebook.rs
extras/src/: combo_box.rs  gauge.rs  grid.rs  lib.rs  notebook.rs  popup_menu.rs  scroll_pane.rs  slider.rs  spin.rs  virtual_listbox.rs
src/: lib.rs
src/app/: application.rs
src/core/: clipboard.rs  command.rs  command_set.rs  draw.rs  event.rs  history.rs  menu_data.rs  mod.rs  palette.rs  screenshot.rs  state.rs
src/ssh/: handler.rs  mod.rs  server.rs
src/terminal/: backend.rs  crossterm_backend.rs  input_parser.rs  mod.rs  remote_input.rs  ssh_backend.rs
src/views/: button.rs  chdir_dialog.rs  checkbox.rs  cluster.rs  color_dialog.rs  color_selector.rs  desktop.rs  dialog.rs  edit_window.rs  editor.rs  file_dialog.rs  file_editor.rs  frame.rs  group.rs  help_viewer.rs  help_window.rs  history.rs  history_viewer.rs  history_window.rs  indicator.rs  input_line.rs  log_window.rs  memo.rs  menu_bar.rs  menu_box.rs  mod.rs  msgbox.rs  paramtext.rs  picture_validator.rs  radiobutton.rs  scrollbar.rs  scroller.rs  sorted_listbox.rs  status_line.rs  syntax.rs  terminal_widget.rs  validator.rs  view.rs  window.rs
